// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCenterPaywall should render the component correctly "for" Pro legacy plan 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="paywallWrapper"
    >
      <div
        class="coloredCircle pro"
      />
      <div
        class="page-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="preview col-12 col-xl-6"
          >
            <img
              alt="Feature preview"
              class="img-fluid previewImage"
              src="test-file-stub"
            />
          </div>
          <div
            class="info col-12 col-xl-6"
          >
            <div
              class="badgeContainer"
            >
              <span
                class="badge legacy badge badge-secondary"
              >
                Legacy Plan
              </span>
              <i
                class="material-icons chevron"
              >
                chevron_right
              </i>
              <span
                class="badge pro badge badge-secondary"
              >
                Pro Plan
              </span>
            </div>
            <h1
              class="header"
            >
              Offer self support via a knowledge base
            </h1>
            <p
              class="infoText"
            >
              Create your own help center in order to help users better understand your product and answer frequently asked questions.
            </p>
            <div>
              <div
                class="mt-3 mb-5 d-inline-block"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade Your Plan
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Advanced" legacy plan 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="paywallWrapper"
    >
      <div
        class="coloredCircle advanced"
      />
      <div
        class="page-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="preview col-12 col-xl-6"
          >
            <img
              alt="Feature preview"
              class="img-fluid previewImage"
              src="test-file-stub"
            />
          </div>
          <div
            class="info col-12 col-xl-6"
          >
            <div
              class="badgeContainer"
            >
              <span
                class="badge legacy badge badge-secondary"
              >
                Legacy Plan
              </span>
              <i
                class="material-icons chevron"
              >
                chevron_right
              </i>
              <span
                class="badge advanced badge badge-secondary"
              >
                Advanced Plan
              </span>
            </div>
            <h1
              class="header"
            >
              Offer self support via a knowledge base
            </h1>
            <p
              class="infoText"
            >
              Create your own help center in order to help users better understand your product and answer frequently asked questions.
              You can contact your customer success manager or do it from here to upgrade today!
            </p>
            <div>
              <div
                class="mt-3 mb-5 d-inline-block"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade Your Plan
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Basic" legacy plan 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="paywallWrapper"
    >
      <div
        class="coloredCircle basic"
      />
      <div
        class="page-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="preview col-12 col-xl-6"
          >
            <img
              alt="Feature preview"
              class="img-fluid previewImage"
              src="test-file-stub"
            />
          </div>
          <div
            class="info col-12 col-xl-6"
          >
            <div
              class="badgeContainer"
            >
              <span
                class="badge legacy badge badge-secondary"
              >
                Legacy Plan
              </span>
              <i
                class="material-icons chevron"
              >
                chevron_right
              </i>
              <span
                class="badge basic badge badge-secondary"
              >
                Basic Plan
              </span>
            </div>
            <h1
              class="header"
            >
              Offer self support via a knowledge base
            </h1>
            <p
              class="infoText"
            >
              Create your own help center in order to help users better understand your product and answer frequently asked questions.
            </p>
            <div>
              <div
                class="mt-3 mb-5 d-inline-block"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Upgrade Your Plan
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelpCenterPaywall should render the component correctly for "Enterprise" legacy plan 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Help Center
      </h1>
    </div>
    <div
      class="paywallWrapper"
    >
      <div
        class="coloredCircle enterprise"
      />
      <div
        class="page-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="preview col-12 col-xl-6"
          >
            <img
              alt="Feature preview"
              class="img-fluid previewImage"
              src="test-file-stub"
            />
          </div>
          <div
            class="info col-12 col-xl-6"
          >
            <div
              class="badgeContainer"
            >
              <span
                class="badge legacy badge badge-secondary"
              >
                Legacy Plan
              </span>
              <i
                class="material-icons chevron"
              >
                chevron_right
              </i>
              <span
                class="badge enterprise badge badge-secondary"
              >
                Enterprise Plan
              </span>
            </div>
            <h1
              class="header"
            >
              Offer self support via a knowledge base
            </h1>
            <p
              class="infoText"
            >
              Create your own help center in order to help users better understand your product and answer frequently asked questions.
              Contact your customer success manager to upgrade today!
            </p>
            <div>
              <div
                class="mt-3 mb-5 d-inline-block"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <button
                    class="upgradeButton btn btn-outline-warning"
                    type="button"
                  >
                    <span
                      class="mr-2 upgradeLabel"
                    >
                      Contact Us
                    </span>
                    <img
                      alt="upgrade-icon"
                      class="upgradeIcon"
                      src="test-file-stub"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
